# SoulEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: auraring.blend  auraring.blend1  auraring.mtl  axe.blend  axe.mtl  enemy.fbx  finalVikingWithoutSecondWeapon.fbx  houses.blend  houses.blend1  hp.ai  hpenemy.ai  komigznordycki.ai  komigznordycki.sai2  purple.ai  sword.ai  totem.blend  vikingWithAxe.fbx  vikingWithAxe_fixed.fbx  vikingWithMace.fbx  vikingWithMace_fixed.fbx  vikingWithSword.fbx  vikingWithSword_fixed.fbx  weapons.blend
res/maps/: Map1.txt  TileForest.txt  TileForest2.txt  TileGrassLand.txt  TileMountain.txt  TileVillage.txt
res/models/: auraring.mtl
res/models/Auras/: AuraRingBlue.mtl  AuraRingRed.mtl  AuraRingYellow.mtl
res/models/character/: goblin.dae  goblin.mtl  goblin2.dae
res/models/houses/: house_1.mtl
res/models/map/: Map1.mtl
res/models/nanosuit/: nanosuitCollider2.mtl
res/models/player/: OneDrive — skrót.lnk  player_attack.dae  player_death.dae  player_idle.dae  player_roll.dae  player_run.dae  vikingModel.fbx
res/models/testHouse/: house.mtl
res/shaders/: Billboard.frag  anim.frag  anim.vert  basic.frag  basic.vert  basic2d.frag  basic2d.vert  basiclight.frag  basiclight.vert  bassiclight.vert  grass.frag  grass.vert  lighting.frag  refractorShader.frag  refractorShader.vert  screen.frag  shadow_mapping_depth.fs  shadow_mapping_depth.vs  skyboxShader.frag  water.frag  water.vert
src/: AssetManager.cpp  AssetManager.h  AudioMaster.cpp  AudioMaster.h  Billboard.cpp  Billboard.h  CMakeLists.txt  Camera.cpp  Camera.h  Collider.cpp  Collider.h  ColliderElipse.cpp  ColliderElipse.h  ColliderMesh.cpp  ColliderMesh.h  CollisionDetector.cpp  CollisionDetector.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  Core.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.h  Frustum.cpp  Frustum.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HUD.cpp  HUD.h  IEventListener.h  InputHandler.cpp  InputHandler.h  InputSystem.cpp  InputSystem.h  (+41 more)
src/GUI/: Text.cpp  Text.h
src/Scripts/: Aura.h  AuraBonudDamage.cpp  AuraBonusDamage.h  AuraBonusHealth.cpp  AuraBonusHealth.h  AuraRunningSpeed.cpp  AuraRunningSpeed.h  CameraFollow.cpp  CameraFollow.h  Character.cpp  Character.h  ColorChanger.cpp  ColorChanger.h  Enemy.cpp  Enemy.h  EnemyWeapon.cpp  EnemyWeapon.h  GameManager.cpp  GameManager.h  HelloTriggers.cpp  HelloTriggers.h  KratosAxe.cpp  KratosAxe.h  MapGenerator.cpp  MapGenerator.h  Player.cpp  Player.h  PlayerEnemyCommunicator.cpp  PlayerEnemyCommunicator.h  Village.cpp  Village.h  Water.cpp  Water.h  Weapon.cpp  Weapon.h  WeaponComparator.cpp  WeaponComparator.h  WeaponFactory.cpp  WeaponFactory.h  WeaponOnTheGround.cpp  (+1 more)
(+33 files in other folders)
